@@ -1,3 +1,4 @@
+1/30/13 rotate and label shaker
 1/30/13 add DebugOriginNode for debugging origins
 1/30/13 set up model-view transforms to match Java implementation
 1/30/13 rename FrameRateDisplay to FrameRateNode
